--- a/elapp/src/main/res/layout/item_user_buy_video.xml
+++ b/elapp/src/main/res/layout/item_user_buy_video.xml
@@ -71,6 +71,7 @@
             app:cardCornerRadius="4dp">
 
             <TextView
+                android:id="@+id/tv_pay"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:background="@color/video_living_pay"
