--- a/elapp/src/main/res/layout/view_chat_input.xml
+++ b/elapp/src/main/res/layout/view_chat_input.xml
@@ -7,45 +7,67 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divider_color"/>
+
+    <LinearLayout
         android:id="@+id/chat_view_input_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="49dp"
-        android:paddingBottom="5dp"
-        android:paddingTop="4dp">
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/chat_view_input_et"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
-            android:layout_toLeftOf="@+id/chat_view_gift_iv"
+            android:layout_marginTop="7dp"
+            android:layout_weight="1"
             android:background="@drawable/shape_chat_input"
             android:hint="加入聊天吧"
-            android:imeOptions="actionSend"
-            android:inputType="text"
             android:maxLength="1000"
             android:maxLines="5"
-            android:minHeight="40dp"
-            android:paddingBottom="9dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:paddingTop="9dp"
+            android:minHeight="36dp"
+            android:paddingBottom="7dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="7dp"
             android:textColor="@color/title_text_color"
             android:textColorHint="@color/text_gray"
             android:textSize="@dimen/text_size_16"/>
 
-        <ImageView
-            android:id="@+id/chat_view_gift_iv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignBottom="@+id/chat_view_input_et"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="12dp"
-            android:src="@drawable/btn_gift_new"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="49dp">
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/chat_view_gift_iv"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="12dp"
+                android:src="@drawable/btn_gift_new"/>
+
+            <TextView
+                android:id="@+id/chat_view_send_tv"
+                android:layout_width="50dp"
+                android:layout_height="36dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/shape_chat_view_send"
+                android:gravity="center"
+                android:text="发送"
+                android:textColor="@color/text_white"
+                android:textSize="@dimen/text_size_16"
+                android:visibility="gone"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
