--- a/elapp/src/main/res/layout/activity_news_detail_layout.xml
+++ b/elapp/src/main/res/layout/activity_news_detail_layout.xml
@@ -4,13 +4,13 @@
              android:layout_height="match_parent"
              android:orientation="vertical">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="50dp"
             android:orientation="vertical">
 
             <com.easyvaas.elapp.view.news.NewsDetailHeaderView
@@ -21,11 +21,13 @@
 
             <FrameLayout
                 android:id="@+id/container"
+                android:layout_marginTop="27dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="200dp"
+                    android:scaleType="centerCrop"
                     android:src="@drawable/test_img"/>
                 </FrameLayout>
 
@@ -34,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <RelativeLayout
         android:id="@+id/bottom_layout"
