--- a/elapp/src/main/res/layout/item_live_video_hot_item.xml
+++ b/elapp/src/main/res/layout/item_live_video_hot_item.xml
@@ -26,34 +26,40 @@
                 android:background="@drawable/account_bitmap_list"
                 android:scaleType="centerCrop"/>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="22dp"
+                android:layout_height="20dp"
                 android:layout_alignParentBottom="true"
-                android:background="#7f000000"
-                android:paddingLeft="4dp">
+                android:background="#66303030">
 
                 <ImageView
-                    android:id="@+id/hot_hot"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginRight="4dp"
-                    android:src="@drawable/ic_hot"/>
+                    android:id="@+id/iv_eye"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_eye"/>
 
                 <TextView
                     android:id="@+id/hot_watch_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_toLeftOf="@+id/iv_hot"
+                    android:layout_toRightOf="@+id/iv_eye"
                     android:gravity="center_vertical"
                     android:maxLines="1"
                     android:text="17,184人观看"
                     android:textColor="@color/white"
                     android:textSize="14sp"/>
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/hot_hot"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="4dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_hot"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
