1 新闻评论页 2 banner标题 3 阅读置灰 4 详情接口

--- a/elapp/src/main/res/layout/news_detail_comment_layout.xml
+++ b/elapp/src/main/res/layout/news_detail_comment_layout.xml
@@ -5,6 +5,7 @@
               android:layout_height="wrap_content"
               android:background="@color/news_detail_user_bg">
     <LinearLayout
+        android:id="@+id/user_comment_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
