--- a/elapp/src/main/res/layout/normal_comment_layout.xml
+++ b/elapp/src/main/res/layout/normal_comment_layout.xml
@@ -3,13 +3,13 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/white">
+              android:background="@color/empty_bg">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:paddingBottom="12dp"
         android:orientation="vertical">
         <RelativeLayout
