--- a/elapp/src/main/res/values/styles.xml
+++ b/elapp/src/main/res/values/styles.xml
@@ -540,7 +540,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:maxLines">2</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:textColor">@color/title_text_color</item>
+        <item name="android:textColor">@drawable/selector_title_color</item>
     </style>
 
     //分割线style
