--- a/extras/ImageSlider/src/main/res/layout/render_type_text.xml
+++ b/extras/ImageSlider/src/main/res/layout/render_type_text.xml
@@ -18,6 +18,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"/>
+        <LinearLayout
+            android:id="@+id/description_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/shape_ad_bg"
+            android:layout_gravity="bottom"
+            android:padding="6dp"
+            android:minHeight="30dp"
+
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:visibility="visible">
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:minLines="1"
+                android:textSize="16sp"
+                android:text="年薪达到这个数，你就是“新锐中产”！可这里面95%的人仍感焦虑"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="3dp"
+                android:textColor="#ffffff"/>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <ProgressBar
@@ -27,22 +52,5 @@
         android:layout_centerInParent="true"
         />
 
-    <LinearLayout
-        android:id="@+id/description_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#77000000"
-        android:gravity="center_vertical"
-        android:minHeight="30dp"
-        android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#ffffff"/>
-    </LinearLayout>
 </RelativeLayout>
