--- a/elapp/src/main/res/layout/activity_news_detail_layout.xml
+++ b/elapp/src/main/res/layout/activity_news_detail_layout.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/news_detail_container"
                 android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
+                android:paddingLeft="5dp"
                 android:layout_height="wrap_content">
                 </FrameLayout>
 
@@ -36,7 +37,19 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
-
+    <FrameLayout
+        android:id="@+id/news_detail_loading_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
+        <ImageView
+            android:id="@+id/news_detail_loading"
+            android:layout_gravity="center"
+            android:layout_width="40dp"
+            android:layout_marginBottom="40dp"
+            android:src="@drawable/loading_icon"
+            android:layout_height="40dp"/>
+    </FrameLayout>
    <com.easyvaas.elapp.view.news.NewsDetailInputView
        android:id="@+id/news_detail_input_layout"
        android:layout_width="match_parent"
