--- a/elapp/src/main/res/drawable/selector_news_detail_praise_bg.xml
+++ b/elapp/src/main/res/drawable/selector_news_detail_praise_bg.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:exitFadeDuration="200"
+        android:enterFadeDuration="200">
     <item android:state_selected="true" android:drawable="@drawable/news_detail_operator_selected_bg"/>
     <item android:state_selected="false" android:drawable="@drawable/news_detail_operator_bg"/>
 </selector>
