--- a/elapp/src/main/res/drawable/user_follow_list_selector.xml
+++ b/elapp/src/main/res/drawable/user_follow_list_selector.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+          android:enterFadeDuration="300"
+          android:exitFadeDuration="300"
+    >
     <item android:state_selected="true" android:drawable="@drawable/user_follow_list_shape"/>
     <item android:state_selected="false" android:drawable="@drawable/user_unfollow_list_shape"/>
 </selector>
