--- a/elapp/src/main/res/layout/fragment_user_center_layout.xml
+++ b/elapp/src/main/res/layout/fragment_user_center_layout.xml
@@ -116,7 +116,7 @@
                     android:layout_marginTop="0.5dp"
                     android:paddingBottom="10dp"
                     android:layout_toRightOf="@id/user_center_focuscounts"
-                    android:text="@string/focus"
+                    android:text="@string/user_focus"
                     />
 
                 <TextView
