--- a/elapp/src/main/res/layout/news_detail_input_layout.xml
+++ b/elapp/src/main/res/layout/news_detail_input_layout.xml
@@ -31,7 +31,9 @@
             android:layout_marginTop="7dp"
             android:layout_toRightOf="@id/tv_news_comment"
             android:gravity="right"
+            android:maxLines="1"
             android:text=""
+            android:layout_marginRight="5dp"
             android:textColor="#ff772d"
             android:textSize="12sp"
             android:visibility="visible"/>
